@@ -36,6 +36,7 @@
 #include <velocypack/velocypack-aliases.h>
 #include <type_traits>
 
+#include "Agency/PathComponent.h"
 #include "Basics/Mutex.h"
 #include "Basics/Result.h"
 #include "GeneralServer/GeneralDefinitions.h"
@@ -290,6 +291,17 @@ class AgencyPrecondition {
   AgencyPrecondition(std::string const& key, Type t, T const& v)
     : key(AgencyCommManager::path(key)), type(t), empty(false),
       builder(std::make_shared<VPackBuilder>()) {
+    builder->add(VPackValue(v));
+    value = builder->slice();
+  };
+
+  AgencyPrecondition(std::shared_ptr<cluster::paths::Path const> const& path, Type, bool e);
+  AgencyPrecondition(std::shared_ptr<cluster::paths::Path const> const& path,
+                     Type, velocypack::Slice const&);
+  template <typename T>
+  AgencyPrecondition(std::shared_ptr<cluster::paths::Path const> const& path,
+                     Type t, T const& v)
+      : key(path->str()), type(t), empty(false), builder(std::make_shared<VPackBuilder>()) {
     builder->add(VPackValue(v));
     value = builder->slice();
   };
