@@ -23,8 +23,7 @@
 #ifndef ARANGOD_CLUSTER_AGENCYPATHS_H
 #define ARANGOD_CLUSTER_AGENCYPATHS_H
 
-#include "PathComponent.h"
-
+#include "Agency/PathComponent.h"
 #include "Basics/debugging.h"
 #include "Cluster/ClusterTypes.h"
 
@@ -566,6 +565,19 @@ class Root : public std::enable_shared_from_this<Root>, public Path {
 
             std::shared_ptr<CacheEnabled const> cacheEnabled() const {
               return CacheEnabled::make_shared(shared_from_this());
+            }
+
+            class IsBuilding : public StaticComponent<IsBuilding, Collection> {
+             public:
+              constexpr char const* component() const noexcept {
+                return "isBuilding";
+              }
+
+              using BaseType::StaticComponent;
+            };
+
+            std::shared_ptr<IsBuilding const> isBuilding() const {
+              return IsBuilding::make_shared(shared_from_this());
             }
           };
 
