@@ -1,6 +1,9 @@
 v3.6.5 (XXXX-XX-XX)
 -------------------
 
+* Internal issue BTS-71: Added a precondition to prevent creating a collection
+  with an invalid `distributeShardsLike` property.
+
 * Correct some log entries.
 
 * Fixed BTS-110: Fulltext index with minLength <= 0 not allowed.
